--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>MY PORTFOLIO</h1>
+            <h1>BISMARK ESHUN - 10532440</h1>
             <h3>My JAVA REPOS</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
@@ -191,7 +191,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
+                                <a href="www.facebook.com">
                                     <img class="img-portfolio img-responsive" src="img/bis.jpg">
 
                                 </a>
